2009-11-25  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        'bugzilla-tool help' should only show common commands like how 'git help' does
        https://bugs.webkit.org/show_bug.cgi?id=31772

        I also took this opportunity to make 'help' a real Command.
        Making 'help' a real command required adding Command.tool (which we've wanted to do for a while).

        * Scripts/bugzilla-tool:
         - change should_show_command_help to should_show_in_main_help
        * Scripts/modules/commands/download.py:
         - Mark commands as being shown in main help or not.
         - show_in_main_help = False is not required (default is false),
           but it seemed to make the commands more self-documenting.
        * Scripts/modules/commands/queries.py: ditto
        * Scripts/modules/commands/queues.py: ditto
        * Scripts/modules/commands/upload.py: ditto
        * Scripts/modules/multicommandtool.py:
         - Make Command hold a pointer to tool in self.tool.  Most Command
           subclasses do not take advantage of this yet, but it was required
           for HelpCommand to be able to reach the tool from _help_epilog().
         - Move MultiCommandTool._standalone_help_for_command to Command.standalone_help
         - Move MultiCommandTool._help_epilog to Command._help_epilog
         - Move "help" logic into HelpCommand.execute()
         - Change should_show_command_help to should_show_in_main_help and add a default implementation.
        * Scripts/modules/multicommandtool_unittest.py:
         - Test hiding of Commands in --help, and that all commands are shown in 'help --all-commands'

2009-11-25  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Dan Bernstein.
        
        Patch by Mark Rowe.

        The buildbots are failing on Windows because when they were upgraded
        to 4.0.4, Apple Application Support was not in their path. Add it to
        the path to fix the buildots.
