@@ -1,3 +1,14 @@
+2009-11-25  Adam Barth  <abarth@webkit.org>
+
+        Reviewed by Eric Seidel.
+
+        bugzilla-tool should have a mark-fixed command
+        https://bugs.webkit.org/show_bug.cgi?id=31853
+
+        Pretty simple stuff.
+
+        * Scripts/modules/commands/upload.py:
+
 2009-11-25  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Adam Barth.
